--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <!-- PORTOFOLIO 1 -->
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./Images/Portofolio/IMG_1255.jpg" alt="No Picture">
+                            <img src="./Images/Portofolio/IMG_0608.JPG" alt="No Picture">
                         </div>
                         <div class="portofolio-info">
                             <div class="portofolio-title">
@@ -146,7 +146,7 @@
                      <!-- PORTOFOLIO 2 -->
                      <div class="portofolio">
                         <div class="portofolio-cover">  
-                            <img src="./Images/Portofolio/IMG_1256.jpg" alt="No Picture">
+                            <img src="./Images/Portofolio/DSC02122.JPG" alt="No Picture">
                         </div>
                         <div class="portofolio-info">
                             <div class="portofolio-title">
@@ -171,7 +171,7 @@
                       <!-- PORTOFOLIO 3 -->
                       <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./Images/Portofolio/IMG_1257.jpg" alt="No Picture">
+                            <img src="./Images/Portofolio/Screenshot (671).png" alt="No Picture">
                         </div>
                         <div class="portofolio-info">
                             <div class="portofolio-title">
@@ -290,7 +290,7 @@
                     <div class="contact-item-detail">
                         <h4>Address</h4>
                         <p>
-                            Jl. Jend. Ahmad Yani No.32 Kota Bandung
+                            Jl. Letjen Ibrahim Adjie No.28
                         </p>
                     </div>
                     </div>
