--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,43 @@
         <link rel="stylesheet" href="./Styles/style1.css"/>
     </head>
 
+    <body>
+        <!-- IOT PORTO -->
+
+        <section id="iot-porto">
+            <div class="wrapper">
+                <h4>
+                    IoT <span>Portofolio</span>
+                </h4>
+                <p>What I've Build</p>
+                <div class="grid">
+                    <div class="item">
+                        <img src="./Images/Portofolio/hydro.png" >
+                        <div class="item-title">
+                            <h4>
+                                Hydroponix
+                            </h4>
+                        </div>
+                        <div class="item-detail">
+                            <p>Project Name Hydroponix Project Category IoT Project Description Hydroponix is an IoT device......</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="" alt="">
+                        
+                    </div>
+                    <div class="item">Smart Desk</div>
+                    
+
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+    </body>
 
 
 </html>
